--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-light margin">
             <a class="navbar-brand" href="#">
-                <img src="C:\Users\Elison\Aula.bootstrap\img\Top do TI.jpg">
+                <img src="C:/Users/Elison/Aula.bootstrap/img/Top do TI.jpg">
             </a>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav">
