--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
-        <title>Minha Pag</title>
+        <title>Minha Pagina</title>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -9,7 +9,7 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-light margin">
             <a class="navbar-brand" href="#">
-                <img src="C:/Users/Elison/Aula.bootstrap/img/Top do TI.jpg">
+                <img src="img/Top do TI.jpg">
             </a>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav">
@@ -29,7 +29,7 @@
         <section id="quemsomos">
             <div class="container-fluid text-center quem-somos margin">
                 <h3 class="margin">Quem somos</h3>
-                <img src="web img/escritorio.jpeg" class="img">
+                <img src="web img/escritorio.jpeg"  width="20%" class="img">
                 <h3>Somos uma equipe concentrada em resultados</h3>
             </div>
         </section>
@@ -40,13 +40,13 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-4">
-                            <img src="web img/google.png" width="50%">
+                            <a href="http:www.google.com.br" target="_blank"><img src="web img/google.png" width="50%"></a>
                         </div>
                         <div class="col-lg-4">
-                            <img src="web img/google.png" width="50%">
+                            <a href="http:www.google.com.br" target="_blank"><img src="web img/google.png" width="50%"></a>
                         </div>
                         <div class="col-lg-4">
-                            <img src="web img/google.png" width="50%">
+                            <a href="http:www.google.com.br" target="_blank"><img src="web img/google.png" width="50%"></a>
                         </div>
                     </div>
                 </div>
@@ -70,12 +70,27 @@
                         </div>
                     </div>
                 </div>
+            </div>        
+        </div>
+        </section>
+        <section id="cards">
+            <div class="container-fluid text-center margin cards">
+                <div class="card" style="width: 18rem; margin: 10px auto;">
+                    <img src="web img/smartphone.jpeg" style="height: 250px;"  class="card-img-top" alt="...">
+                    <div class="card-body">
+                    <p class="card-text">
+                        Some <a href="https://www.samsung.com/br/unpacked/?utm_source=google&utm_medium=ppc&utm_campaign=br_pd_ppc_google_smartphone-galaxy-z-flip4_register_cad15-a0707_text_none_paid-cdm-$none$-*celular%20samsung*&utm_content=none&utm_term=*celular%20samsung*&cid=br_pd_ppc_google_smartphone-galaxy-z-flip4_register_cad15-a0707_text_none_paid-cdm-$none$-*celular%20samsung*&keeplink=true#form" target="_blank"> example text to build</a> on the card title and make up the bulk of the card's content.
+                    </p>
+                    <a href="http://jogosmobilebr.com.br/" target="_blank">
+                    <button type="button" class="btn btn-primary text-white">Open</button>
+                    </a>
+                </div>
             </div>
         </section>
-        <footer class="container-fluid text-center bg-footer">
-            <p>
+        <footer class="container-fluid text-center bg-dark">
+            <span class="text-white">
                 Desenvolvido por Elisson Teodosio
-            </p>
+            </span>
         </footer>
     </body>
 </html>
